--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  
+
   <section id="login-area">
     <h1 class="text-center">Welcome to Pioneer Bank</h1>
     <div class="submit-area">
@@ -26,6 +26,48 @@
   </section>
 
 
+  <section id="transaction-area">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="deposit status">
+          <h5>Deposit</h5>
+          <h2>$00</h2>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="withdraw status">
+          <h5>Withdraw</h5>
+          <h2>$00</h2>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="balance status">
+          <h5>Balance</h5>
+          <h2>$1240</h2>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="submit-area">
+          <h4>Deposit</h4>
+          <br>
+          <input class="form-control" placeholder="$amount you want to deposit" type="text">
+          <br>
+          <button class="btn btn-success">Deposit</button>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="submit-area">
+          <h4>Withdraw</h4>
+          <br>
+          <input class="form-control" placeholder="$amount you want to withdraw" type="text">
+          <br>
+          <button class="btn btn-success">Withdraw</button>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <script src="/script.js"></script>
