--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
+
 <body>
 
 
@@ -31,19 +32,19 @@
       <div class="col-md-4">
         <div class="deposit status">
           <h5>Deposit</h5>
-          <h2>$00</h2>
+          <h2>$ <span id="currentDeposit">00</span></h2>
         </div>
       </div>
       <div class="col-md-4">
         <div class="withdraw status">
           <h5>Withdraw</h5>
-          <h2>$00</h2>
+          <h2>$ <span id="currentWithdraw">00</span></h2>
         </div>
       </div>
       <div class="col-md-4">
         <div class="balance status">
           <h5>Balance</h5>
-          <h2>$1240</h2>
+          <h2>$ <span id="currentBalance">1240</span></h2>
         </div>
       </div>
     </div>
@@ -52,18 +53,18 @@
         <div class="submit-area">
           <h4>Deposit</h4>
           <br>
-          <input class="form-control" placeholder="$amount you want to deposit" type="text">
+          <input id="depositAmount" class="form-control" placeholder="$amount you want to deposit" type="text">
           <br>
-          <button class="btn btn-success">Deposit</button>
+          <button id="addDeposit" class="btn btn-success">Deposit</button>
         </div>
       </div>
       <div class="col-md-6">
         <div class="submit-area">
           <h4>Withdraw</h4>
           <br>
-          <input class="form-control" placeholder="$amount you want to withdraw" type="text">
+          <input id="withdrawAmount" class="form-control" placeholder="$amount you want to withdraw" type="text">
           <br>
-          <button class="btn btn-success">Withdraw</button>
+          <button id="addWithdraw" class="btn btn-success">Withdraw</button>
         </div>
       </div>
     </div>
@@ -75,5 +76,6 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </body>
+
 
 </html>
