--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 
-  <section id="login-area">
+  <div id="login-area">
     <h1 class="text-center">Welcome to Pioneer Bank</h1>
     <div class="submit-area">
       <h4>Login</h4>
@@ -22,12 +22,12 @@
       <br>
       <input type="password" class="form-control" placeholder="Password">
       <br>
-      <button id="Enter" class="btn btn-success">Enter</button>
+      <button id="login" class="btn btn-success">Enter</button>
     </div>
-  </section>
+  </div>
 
 
-  <section id="transaction-area">
+  <div id="transaction-area">
     <div class="row">
       <div class="col-md-4">
         <div class="deposit status">
@@ -68,10 +68,16 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
 
   <script src="/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
