--- a/index.html
+++ b/index.html
@@ -13,19 +13,17 @@
 
 <body>
 
-
   <div id="login-area">
     <h1 class="text-center">Welcome to Pioneer Bank</h1>
     <div class="submit-area">
-      <h4>Login</h4>
-      <input type="text" class="form-control" placeholder="Email">
-      <br>
-      <input type="password" class="form-control" placeholder="Password">
-      <br>
-      <button id="login" class="btn btn-success">Enter</button>
+        <h4>Login</h4>
+        <input type="text" class="form-control" placeholder="Email">
+        <br>
+        <input type="password" class="form-control" placeholder="Password">
+        <br>
+        <button id="login" class="btn btn-success">Enter</button>
     </div>
-  </div>
-
+</div>
 
   <div id="transaction-area">
     <div class="row">
@@ -70,8 +68,7 @@
     </div>
   </div>
 
-
-  <script src="/script.js"></script>
+  <script src="./script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
